<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <Button
        android:id="@+id/notification_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notif_set" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_acc" />


</LinearLayout>