<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView android:id="@+id/announcement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announcement_placeholder"
        android:textColor="@color/app_colour"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"/>

    <LinearLayout android:id="@+id/ABlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button android:id="@+id/accountsettingsbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Account_Settings"
            android:layout_gravity="center"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bookbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:text="@string/Book_A_Machine"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout android:id="@+id/CDlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelbtn"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="10dp"
            android:text="@string/Cancel_My_Booking"
            tools:ignore="ButtonStyle" />

        <Button android:id="@+id/displaybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Display_Booking_And_Time"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>
    <TextView android:id="@+id/displaytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_text"
        android:textColor="@color/app_colour"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"/>

</LinearLayout>